<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    tools:context=".views.fragments.LogOut">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_to"
            android:layout_width="203dp"
            android:layout_height="66dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/welcome_to"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/the_best_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="84dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/the_best_app"
            android:textAppearance="@style/the_best_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_to" />


        <RelativeLayout
            android:id="@+id/relativeLayoutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/already_have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have"
                android:textAppearance="@style/already_have"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/already_have"
                android:text="Inicia Sesión"
                android:textAppearance="@style/already_have"
                android:textColor="@color/light_purple"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/rubik_medium"
            android:text="Registrarse"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayoutText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/landing_image"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/the_best_app"
            app:srcCompat="@drawable/img_fit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>