<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/fit_gain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="@string/fit_gain"
        android:textAppearance="@style/fit_gain_ready_to"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ready_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ready_to_go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fit_gain"
        android:textAppearance="@style/fit_gain_ready_to"/>

    <TextView
        android:id="@+id/thanks_for"
        android:layout_width="204dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/thanks_for"
        android:textAppearance="@style/thanks_for"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ready_to" />

    <Button
        android:id="@+id/button_get_started"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button"
        android:layout_marginBottom="44dp"
        android:background="@drawable/custom_button_white"
        android:text="@string/button_get_started"
        android:textAppearance="@style/get_started"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/pink_circle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/green_circle"
        app:srcCompat="@drawable/pink_circle" />

    <ImageView
        android:id="@+id/green_circle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/green_circle" />

    <ImageView
        android:id="@+id/green_circle_two"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toTopOf="@+id/button_get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/green_circle" />

    <ImageView
        android:id="@+id/pink_circle_two"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pink_circle" />

    <ImageView
        android:id="@+id/sky_blue_circle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toStartOf="@+id/thanks_for"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ready_to"
        app:srcCompat="@drawable/sky_blue_circle" />

</androidx.constraintlayout.widget.ConstraintLayout>